<resources>
    <string name="app_name">WeatherTracker</string>
    <string name="maps_api_key">AIzaSyCuPuvYk6tylLQbUpZxYuZqc-dxJaLNH7c</string>
    <string name="account">信箱</string>
    <string name="password">密碼</string>
    <string name="password_again">確認密碼</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="forget">忘記密碼?</string>
    <string name="home">主頁面</string>
    <string name="profile">個人資料</string>
    <string name="FP_growth">搜尋/推薦</string>
    <string name="signUpMsg">註冊 Weather Tracker</string>
    <string name="forgetMsg">忘記密碼</string>
    <string name="send_mail">取得信件</string>
    <string name="name">姓名</string>
    <string name="hobby">興趣</string>
    <string name="AHP">排程偏好</string>
    <string name="weather">天氣良好</string>
    <string name="freeTime">喜好時間</string>
    <string name="free_time2">通常有空的時間</string>
    <string name="keep_participants">保留來賓</string>
    <string name="monday">(一)</string>
    <string name="tuesday">(二)</string>
    <string name="wednesday">(三)</string>
    <string name="thursday">(四)</string>
    <string name="friday">(五)</string>
    <string name="saturday">(六)</string>
    <string name="sunday">(日)</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="space" />
    <string name="hobby_class">活動類別</string>
    <string name="hobby_name">活動名稱</string>
    <string name="confirm">確定</string>

    <string-array name="hobby_classes">
        <item>戶外活動類</item>
        <item>運動類</item>
        <item>藝文嗜好類</item>
        <item>益智類</item>
        <item>視聽類</item>
        <item>休憩社交類</item>
        <item>其它類</item>
    </string-array>
    <string-array name="hobbies_outdoor_events">
        <!--        野外活動項-->
        <item>健行</item>
        <item>賞鳥</item>
        <item>散步</item>
        <item>旅遊</item>
        <!--        車輛休閒項-->
        <item>賽車</item>
        <item>開車兜風</item>
        <item>騎單車</item>
    </string-array>
    <string-array name="hobbies_sports">
        <!--        魚釣項-->
        <item>釣魚</item>
        <!--        戲水項-->
        <item>游泳</item>
        <item>水上活動</item>
        <!--        空中活動項-->
        <item>拖曳傘</item>
        <!--        室內球賽項-->
        <item>桌球</item>
        <item>撞球</item>
        <item>保齡球</item>
        <item>羽球</item>
        <!--        室外球賽項-->
        <item>網球</item>
        <item>棒球</item>
        <item>籃球</item>
        <item>高爾夫球</item>
        <item>排球</item>
        <!--        養身健身項-->
        <item>打拳</item>
        <item>靜坐</item>
        <item>有氧</item>
        <item>健身</item>
        <item>瑜珈</item>
        <!--        登山項-->
        <item>登山</item>
        <item>健行</item>

        <!--        跑步項-->
        <item>慢跑</item>
        <item>跑步</item>
    </string-array>
    <string-array name="hobbies_arts">
        <!--        樂器項-->
        <item>彈奏樂器</item>
        <!--        舞蹈項-->
        <item>舞蹈</item>
        <!--        攝影項-->
        <item>攝影</item>
        <!--        中國書畫項-->
        <item>書法</item>
        <!--        藝文欣賞項-->
        <item>藝文展覽</item>
        <item>表演欣賞</item>
        <!--        手工藝項-->
        <item>手工藝</item>
        <!--        閱讀項-->
        <item>閱讀</item>
        <!--        園藝項-->
        <item>園藝</item>
    </string-array>
    <string-array name="hobbies_puzzle">
        <!--        電腦網路項-->
        <item>上網</item>
        <item>電競</item>
        <!--        動腦遊戲項-->
        <item>桌遊</item>
        <item>益智遊戲</item>
        <item>密室逃脫</item>
        <!--        博戲項-->
        <item>博弈</item>
    </string-array>
    <string-array name="hobbies_audiovisual">
        <!--        視項-->
        <item>電視</item>
        <item>錄影帶</item>
        <item>電影</item>
        <!--        聽項-->
        <item>KTV</item>
        <item>聽音樂</item>
    </string-array>
    <string-array name="hobbies_social">
        <!--        美容塑身項-->
        <item>泡湯</item>
        <item>SPA</item>
        <item>按摩</item>
        <!--        休閒中心項-->
        <item>遊樂園</item>
        <item>娛樂中心</item>
        <!--        逛街購物項-->
        <item>逛街購物</item>
        <!--        飲食項-->
        <item>下午茶</item>
        <!--        聚會活動項-->
        <item>聚餐</item>
        <!--        宗教活動項-->
        <item>禮拜</item>
        <!--        團體活動項-->
        <item>團康</item>
    </string-array>
    <string-array name="hobbies_others">
        <!--        居家項-->
        <item>親子活動</item>
        <item>打掃</item>
        <item>睡覺</item>
        <item>做家事</item>
        <!--        其他項-->
        <item>其他</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="day_2">
        <item>溫度</item>
        <item>濕度</item>
        <item>風速</item>
        <item>降雨機率</item>
        <item>紫外線</item>
        <item>AQI</item>
    </string-array>

    <string-array name="day_7">
        <item>溫度</item>
        <item>濕度</item>
        <item>風速</item>
        <item>紫外線</item>
    </string-array>

    <string-array name="day_history">
        <item>溫度</item>
        <item>濕度</item>
        <item>風速</item>
        <item>紫外線</item>
    </string-array>

    <string-array name="day_future">
        <item>溫度</item>
        <item>濕度</item>
        <item>風速</item>
        <item>紫外線</item>
    </string-array>


</resources>